<package>
  <name>u1</name>
  <version>0.0.1</version>

  <description>sda das das</description>
  <author email="user@example.com">anton</author>

  <maintainer email="user@example.com">anton</maintainer>

  <license>not set</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
